--- a/public/assets/scss/bootstrap-datepicker.scss
+++ b/public/assets/scss/bootstrap-datepicker.scss
@@ -1,3 +1,8 @@
 .dropdown-menu {
     background-color: white;
 }
+.datepicker-occupied-beds {
+    &:hover {
+        background: transparent !important;
+    }
+}
