--- a/public/assets/scss/datatables_roomapp_reservation.scss
+++ b/public/assets/scss/datatables_roomapp_reservation.scss
@@ -13,6 +13,7 @@
         tr {
             th {
                 padding: 0.25em;
+                font-size: 1.2em;
             }
         }
     }
@@ -20,6 +21,7 @@
         tr {
             td {
                 vertical-align: middle;
+                font-size: 1.2em;
                 padding: 0.25em;
                 &:before {
                     background-color: #b7282e;
