--- a/public/assets/css/all_reservation.css
+++ b/public/assets/css/all_reservation.css
@@ -3,6 +3,21 @@
   padding: 23px;
   font-size: 16px; }
 
+#table_all_reservations thead tr th, #table_all_reservations thead tr td, #table_all_reservations tbody tr th, #table_all_reservations tbody tr td {
+  font-size: 1.2em; }
+#table_all_reservations thead tr.odd, #table_all_reservations tbody tr.odd {
+  background-color: #cbcbcb; }
+#table_all_reservations thead tr.even, #table_all_reservations tbody tr.even {
+  border-bottom: 1px solid #b7282e;
+  border-top: 1px solid #b7282e; }
+
+#guestTable {
+  border-left: 1px solid #b7282e;
+  border-top: 1px solid #b7282e; }
+  #guestTable thead tr th, #guestTable thead tr td, #guestTable tbody tr th, #guestTable tbody tr td {
+    font-size: 1.0em;
+    padding: 0.25em; }
+
 .show_total_res {
   border: .13333em solid #b7b7b7;
   border-radius: .13333em;
