--- a/public/assets/css/all_reservation.css
+++ b/public/assets/css/all_reservation.css
@@ -14,9 +14,44 @@
 #guestTable {
   border-left: 1px solid #b7282e;
   border-top: 1px solid #b7282e; }
+  #guestTable thead tr {
+    display: block; }
+  #guestTable tbody {
+    display: block;
+    overflow: auto;
+    height: 58px;
+    width: 100%; }
+  #guestTable thead tr th, #guestTable tbody tr th {
+    border-bottom: 1px solid #333; }
   #guestTable thead tr th, #guestTable thead tr td, #guestTable tbody tr th, #guestTable tbody tr td {
     font-size: 1.0em;
-    padding: 0.25em; }
+    padding: 0.25em;
+    border-right: 1px solid #333; }
+  #guestTable thead tr td:first-child, #guestTable tbody tr td:first-child {
+    min-width: 28px; }
+  #guestTable thead tr th:nth-child(2), #guestTable tbody tr th:nth-child(2) {
+    min-width: 183px; }
+  #guestTable thead tr td:nth-child(3), #guestTable tbody tr td:nth-child(3) {
+    min-width: 65px; }
+  #guestTable thead tr td:nth-child(4), #guestTable tbody tr td:nth-child(4) {
+    min-width: 97px; }
+  #guestTable thead tr th:nth-child(5), #guestTable tbody tr th:nth-child(5) {
+    min-width: 157px; }
+  #guestTable thead tr th:nth-child(6), #guestTable tbody tr th:nth-child(6) {
+    min-width: 52px;
+    text-align: right; }
+  #guestTable thead tr td:nth-child(7), #guestTable tbody tr td:nth-child(7) {
+    min-width: 91px;
+    text-align: right; }
+  #guestTable thead tr td:nth-child(8), #guestTable tbody tr td:nth-child(8) {
+    min-width: 66px; }
+  #guestTable thead tr td:nth-child(9), #guestTable tbody tr td:nth-child(9) {
+    min-width: 78px;
+    border-right: none;
+    text-align: right; }
+  #guestTable thead tr th:nth-child(9), #guestTable tbody tr th:nth-child(9) {
+    min-width: 78px;
+    border-right: none; }
 
 .show_total_res {
   border: .13333em solid #b7b7b7;
