--- a/public/assets/scss/all_reservation.scss
+++ b/public/assets/scss/all_reservation.scss
@@ -23,11 +23,61 @@
 #guestTable {
     border-left: 1px solid $brand-danger;
     border-top: 1px solid $brand-danger;
+    thead {
+        tr {
+            display: block;
+        }
+    }
+    tbody {
+        display: block;
+        overflow: auto;
+        height: 58px;
+        width: 100%;
+    }
     thead, tbody {
         tr {
+            th {
+                border-bottom: 1px solid #333;
+            }
             th, td {
                 font-size: 1.0em;
                 padding: 0.25em;
+                border-right: 1px solid #333;
+            }
+            td:first-child {
+                min-width: 28px;
+            }
+            th:nth-child(2) {
+                min-width: 183px;
+            }
+            td:nth-child(3) {
+                min-width: 65px;
+            }
+            td:nth-child(4) {
+                min-width: 97px;
+            }
+            th:nth-child(5) {
+                min-width: 157px;
+            }
+            th:nth-child(6) {
+                min-width: 52px;
+                text-align: right;
+            }
+            td:nth-child(7) {
+                min-width: 91px;
+                text-align: right;
+            }
+            td:nth-child(8) {
+                min-width: 66px;
+            }
+            td:nth-child(9) {
+                min-width: 78px;
+                border-right: none;
+                text-align: right;
+            }
+            th:nth-child(9) {
+                min-width: 78px;
+                border-right: none;
             }
         }
     }
