--- a/public/assets/scss/new_reservation.scss
+++ b/public/assets/scss/new_reservation.scss
@@ -94,7 +94,7 @@
     color: rgba(0, 0, 225, 0.5) !important;
 }
 #total_res {
-    font-size: 1.1em;
+    font-size: 1.25em;
     margin: 5px 0;
     padding: .1333em .43333em;
     display: block;
@@ -103,6 +103,17 @@
     position: initial;
     span {
         padding: 0;
+    }
+}
+#resButtons {
+    position: fixed;
+    bottom: 12px;
+    left: 55px;
+    width: calc(100% - 55px);
+    border-top: 1px solid $brand-danger;
+    padding: 0.5em 0;
+    button {
+        width: 100%;
     }
 }
 .show_reservation_guest {
@@ -114,7 +125,12 @@
     padding: .1333em .43333em;
   }
 }
-[id^="remove_guest_"] {
+#guest_entries {
+    max-height: 62vh;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+[id^="remove_guest_"], #clone_guest {
     font-size: 1em;
     display: inline !important;
     border: none !important;
@@ -167,7 +183,7 @@ label {
   position: relative;
 }
 [id^="total_guest_"] {
-    font-size: 1.1em;
+    font-size: 1.25em;
     margin: 5px 0;
     padding: .1333em .43333em;
     display: block;
@@ -302,13 +318,6 @@ label {
                 opacity:1;
             }
         }
-        &:focus, &:focus-within {
-            i:after {
-                content: "\f077";
-                padding-left: 8px;
-            }
-
-        }
     }
     #free-beds-title {
         background-color: #b7282e !important;
@@ -323,25 +332,26 @@ label {
         padding: 0.25em 0.5em;
         cursor: pointer;
     }
-    #all-free-beds {
-        color: #333;
-        background-color: white;
-        width: 128px;
-        max-height: 350px;
-        overflow-x: hidden;
-        overflow-y: auto;
-        position: absolute;
-        border: 1px solid $brand-danger;
-        [id^="free-beds_"] {
-            padding: 0.25em 0.5em;
-        }
-        .tooMuchBeds {
-            color: #b7282e;
-            font-weight: bold;
-            background-color: #f7f7f7;
-        }
+}
+#all-free-beds {
+    height: 200px;
+    overflow-x: hidden;
+    overflow-y: auto;
+    list-style-type: none;
+    padding: 1em;
+    font-size: 1.2em;
+    color: #333;
+    [id^="free-beds_"] {
+        padding: 0.25em 0.5em;
     }
 }
+
+.tooMuchBeds {
+    color: #b7282e;
+    font-weight: bold;
+    background-color: #f7f7f7;
+}
+
 #reservationInfo {
   padding: 0 0 0.25em 0;
     font-size: 1.2em;
@@ -401,6 +411,10 @@ label {
                 border: 1px solid #b7282e !important;
                 border-right: none !important;
                 border-left: none !important;
+            }
+            td.myRes {
+                background: rgba(0, 0, 0, 0.28) !important;
+                color: #000000;
             }
             th, td {
                 width: 55px !important;
