--- a/public/assets/scss/_bootstrap-variables.scss
+++ b/public/assets/scss/_bootstrap-variables.scss
@@ -33,7 +33,7 @@ $brand-info: $brand-danger;
 //* Background color for `<table>` even.
  $body-bg-even: #f7f7f7;
 //* Background color for `<table>` odd.
- $body-bg-odd: #484848;
+ $body-bg-odd: #aeaeae;
 //* Global text color on `<body>`.
  $text-color:            $gray-dark;
 
