--- a/public/assets/scss/form.scss
+++ b/public/assets/scss/form.scss
@@ -124,7 +124,7 @@ form {
         width: 80%;
         margin: auto;
     }
-    .requ:after {
+    .requ:before {
         content: "*";
         color: $color-h1;
         float: right;
