--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -5875,12 +5875,13 @@ span[class="reservation_guest_num"]:after {
         color: white; }
         #error-wrap #errors ul li h3 .glyphicon-warning-sign {
           padding-right: 1.2em; }
-    #error-wrap #errors .error-field {
-      font-style: italic; }
-      #error-wrap #errors .error-field :before {
-        content: " '"; }
-      #error-wrap #errors .error-field :after {
-        content: "' "; }
+
+.error-field {
+  font-style: italic; }
+  .error-field :before {
+    content: " '"; }
+  .error-field :after {
+    content: "' "; }
 
 .white-row {
   background-color: transparent !important;
@@ -5890,15 +5891,21 @@ span[class="reservation_guest_num"]:after {
   color: #333; }
 
 #totals {
-  position: fixed;
-  top: 44px;
   width: 100%;
   margin: 0 auto;
   background-color: #fff;
   border-bottom: 1px solid #333; }
 
+#bills_wrapper #bills td {
+  padding: 3px; }
+#bills_wrapper .row {
+  width: 99%; }
+
+[name="bills_length"] {
+  padding: 0; }
+
 #after-totals {
-  margin-top: 220px; }
+  margin-top: 156px; }
 
 table.tablesorter thead tr th.address {
   color: #333;
@@ -5907,8 +5914,6 @@ table.tablesorter thead tr th.address {
   font-weight: normal; }
 
 #bill_searcher {
-  position: fixed;
-  top: 182px;
   background-color: #fff;
   width: 100%;
   border-bottom: 1px solid #333;
@@ -6125,7 +6130,7 @@ form .required {
 form .required-help-text {
   width: 80%;
   margin: auto; }
-form .requ:after {
+form .requ:before {
   content: "*";
   color: #b7282e;
   float: right; }
@@ -6477,7 +6482,8 @@ ul li.dropup ul.dropdown-menu, ul li.dropdown-toggle ul.dropdown-menu {
 #noview {
   margin-left: 2em; }
   #noview .topRow {
-    border-bottom: 1px solid #b7282e; }
+    border-bottom: 1px solid #b7282e;
+    z-index: 1000; }
     #noview .topRow h1 {
       border-bottom: none; }
 
@@ -6689,6 +6695,18 @@ table.tablesorter, table.tablesorter thead tr th {
     margin-bottom: 5px; }
   form label {
     margin-top: 3px; } }
+.close {
+  background-color: #F7F7F6 !important;
+  border: 2px solid #b7282e !important;
+  opacity: 1 !important;
+  font-size: 14px !important;
+  line-height: 1.428571429 !important;
+  padding: 6px 12px !important; }
+
+.modal-header .close {
+  border: none !important;
+  font-size: 22px !important; }
+
 .bx-wrapper, .bx-viewport {
   height: 450px !important; }
 
@@ -6746,15 +6764,31 @@ table.tablesorter, table.tablesorter thead tr th {
   display: block;
   margin: 40vh auto; }
 
+.btn-link-style {
+  color: #333;
+  font-weight: normal;
+  font-size: 1.1em;
+  width: 100%;
+  height: 55px;
+  display: inline-block;
+  padding: 18px;
+  border: none;
+  text-align: left;
+  background: transparent; }
+  .btn-link-style:hover, .btn-link-style:active, .btn-link-style:focus {
+    background-color: #b7282e !important;
+    color: white !important;
+    padding: 18px 18px; }
+
 #loading {
   position: fixed;
-  top: 0%;
-  left: 0%;
+  top: 62px;
+  left: 55px;
   z-index: 100000;
   display: none;
   font-weight: bold;
   text-align: center;
-  width: 100%;
+  width: 96%;
   height: 100%;
   background-color: transparent;
   color: #b7282e; }
@@ -6804,12 +6838,6 @@ li.lang_active > a {
         text-align: center; }
         #message-wrap #message ul li h3 .glyphicon-warning-sign {
           padding-right: 1.2em; }
-    #message-wrap #message .error-field {
-      font-style: italic; }
-      #message-wrap #message .error-field :before {
-        content: " '"; }
-      #message-wrap #message .error-field :after {
-        content: "' "; }
 
 #footer {
   width: 100%;
@@ -6880,13 +6908,6 @@ div:not(.main-nav-container) > li.dropdown-toggle:hover > ul.dropdown-menu {
 
 .navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
   background-color: #b7282e; }
-
-.panel-warning .error-field {
-  font-style: italic; }
-  .panel-warning .error-field :before {
-    content: " '"; }
-  .panel-warning .error-field :after {
-    content: "' "; }
 
 .panel-warning > .panel-heading {
   background-color: #b7282e; }
